fixed menu and dashboard being behind navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,10 +6,15 @@ body {
 
 @keyframes gradient {
     0% {
-        background-position: 0% 0%;
+        background-position: 0% 100%;
     }
 
     100% {
         background-position: 100% 100%;
     }
+}
+
+.App {
+    display: flex;
+    flex-direction: row;
 }
