--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -3,7 +3,7 @@
 }
 
 .header {
-    position: fixed;
+    position: sticky;
     width: 100%;
     top: 0;
     left: 0;
