--- a/client/src/index.css
+++ b/client/src/index.css
@@ -79,3 +79,7 @@ h6 {
 }
 
 /* begin global styles here */
+#root {
+  display: flex;
+  flex-direction: column;
+}
